<resources>
    <string name="app_name">시위 관리</string>

    <string name="management_demonstration">시위 관리</string>
    <string name="addition_demonstration">시위 추가</string>
    <string name="list_demonstration">시위 리스트</string>

    <string name="demonstration_name">시위 명칭</string>
    <string name="input_text">[ text 입력 ]</string>
    <string name="group_name_demonstration">시위 단체명</string>
    <string name="date_demonstration">시위 개최 일시</string>
    <string name="example_date_demonstration">1월&#160;1일&#160;0시&#160;0분&#160;~&#160;1월&#160;1일&#160;0시&#160;0분</string>

    <string name="day">주간</string>
    <string name="night">야간</string>
    <string name="late_night">심야"</string>
    <string name="place_demonstration">시위 개최 장소</string>
    <string name="example_place_demonstration">[ 대전 00구 00로 00길 00–00 ]</string>
    <string name="example_place_zone_home">주거지역, 학교</string>
    <string name="example_place_zone_public">공공도서관</string>
    <string name="example_place_zone_etc">그 밖</string>
    <string name="organizer">주최자</string>
    <string name="name">성명</string>
    <string name="example_organizer">[ 시위 측 연락망에서 가져옴 ]</string>
    <string name="phone_number">연락처</string>
    <string name="position">직책</string>
    <string name="demonstration_phone_number">시위 측 연락망</string>
    <string name="background_noise_level">배경 소음도</string>
    <string name="plz_input">입력해주세요.</string>
    <string name="create">생성</string>

    <string name="add_phone_number">연락망 추가하기</string>
    <string name="name_phone">이름 :&#160;</string>
    <string name="name_phone_example">ex) 김아무개</string>
    <string name="number_phone">번호 :&#160;</string>
    <string name="number_phone_example">ex) 01012345678</string>
    <string name="number_position">직책 :&#160;</string>
    <string name="number_position_example">ex) 대표자</string>
    <string name="add">추가하기</string>

    <string name="example_place">[ 대전 00구 00로 ]</string>
    <string name="example_place_detail">[ 2023.04.11 ] / [ 00 단체 ]</string>

    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="month">월</string>
    <string name="day_month">일</string>
    <string name="year">년</string>
    <string name="input_end_time">마침 시간 입력</string>
    <string name="input_end_date">마침 날짜 입력</string>
    <string name="input_start_time">시작 시간 입력</string>
    <string name="input_start_date">시작 날짜 입력</string>
    <string name="cancel">취소</string>
    <string name="example_time">0시 0분</string>
    <string name="example_date">1월 1일</string>
    <string name="organization">단체</string>

    <string name="space">&#160;</string>
    <string name="tilde">~</string>
    <string name="dash">-</string>
    <string name="split_space">\\s</string>
    <string name="dot">.</string>
    <string name="slash">/</string>
    <string name="open_bracket">[</string>
    <string name="close_bracket">]</string>
    <string name="colon">:</string>
    <string name="comma">,</string>

    <string name="measurement">측정</string>
    <string name="record">기록</string>
    <string name="notification">고지</string>

    <string name="standard_noise_level">기준 소음도</string>
    <string name="equivalent_noise">등가 소음</string>
    <string name="highest_noise">최고 소음</string>
    <string name="example_noise">[ 00 ] dB</string>
    <string name="input_record_measurement">측정 기록 입력</string>
    <string name="example_group">[단체명]</string>
    <string name="example_date_demonstration2">[] 월 []일 []시 []분 ~ []월 []일 []시 []분</string>
    <string name="example_organizer_name_detail">[ 000 ]</string>
    <string name="example_organizer_phone_number_detail">[ 010–0000–0000 ]</string>
    <string name="example_organizer_position_detail">[ 대표자 ]</string>
    <string name="background_noise">배경 소음도</string>

    <string name="plz_input_demonstration_name">시위 명칭을 입력해주세요.</string>
    <string name="plz_input_group_name">시위 단체명을 입력해주세요.</string>
    <string name="plz_reset_date">날짜를 다시 설정해주세요.</string>
    <string name="plz_input_place">시위 개최장소를 입력해주세요.</string>
    <string name="plz_input_organizer">주최자 정보를 입력해주세요.</string>
    <string name="plz_input_name">이름을 입력해주세요.</string>
    <string name="plz_input_number">번호를 입력해주세요.</string>
    <string name="plz_input_position">직책을 입력해주세요.</string>
    <string name="plz_input_background_noise">배경소음도를 입력해주세요.</string>

    <string name="manage_background_noise">배경 소음도 관리</string>
    <string name="update">수정</string>

    <string name="complete_add_demonstration">시위 정보가 추가되었습니다.</string>
    <string name="complete_update_background_noise">배경 소음도가 수정되었습니다.</string>

    <string name="decibel">dB</string>
    <string name="demonstration_time">시위 시간</string>

    <string name="input_measurement">측정 입력</string>
    <string name="measurement_time">측정 시간</string>
    <string name="measurement_time_example">[ 00 : 00 ]</string>
    <string name="measurement_place">측정 위치</string>
    <string name="detail_address_example">[ ]</string>
    <string name="detail_address">상세 주소</string>
    <string name="measurement_distance"><u>측정 거리</u></string>
    <string name="measurement_distance_example">[ 0 ]</string>
    <string name="wind_speed"><u>풍속</u></string>
    <string name="wind_speed_example">[ 0.0 ]</string>
    <string name="input_measurement_value">측정값 입력</string>
    <string name="equivalent">등가</string>
    <string name="highest">최고</string>
    <string name="correction_value">보정치 적용값</string>
    <string name="standard_noise">기준 소음도</string>
    <string name="reset">초기화</string>

    <string name="noise_example">[ 00 ]</string>
    <string name="meter">m</string>
    <string name="meter_per_second">m/s</string>
    <string name="number_zero">0</string>

    <string name="complete_add_measurement">측정 정보가 기록되었습니다.</string>

    <string name="plz_input_start_time">시작 시간을 입력해주세요.</string>
    <string name="plz_input_end_time">마침 시간을 입력해주세요.</string>
    <string name="plz_input_measurement_place">측정 위치를 입력해주세요.</string>
    <string name="plz_input_measurement_place_detail">상세 주소를 입력해주세요.</string>
    <string name="plz_input_measurement_distance">측정 거리를 입력해주세요.</string>
    <string name="plz_input_measurement_wind_speed">풍속을 입력해주세요.</string>
    <string name="plz_input_measurement">측정값을 입력해주세요.</string>

    <string name="send_notice">안내문 발송</string>
    <string name="maintenance_order">유지 명령</string>
    <string name="stop_order">중지 명령</string>
    <string name="temporary_storage">일시 보관</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="number_eleven">11</string>

    <string name="exceed_highest_noise">최고소음 초과</string>
    <string name="exceed_equivalent_noise">등가소음 초과</string>
    <string name="highest_noise_violation">최고소음 위반</string>
    <string name="after_maintenance_order">유지명령 후 (등가·최고)</string>
    <string name="skip_maintenance_order_equivalent">유지명령 생략(등가)</string>
    <string name="skip_maintenance_order_highest">유지명령 생략(최고)</string>
    <string name="skip_stop_order">중지명령 생략(유지명령 후)</string>
    <string name="violation_after_a_stop_order">중지명령 후 위반 시</string>
    <string name="returning_temporary_storage">일시보관 반환 중</string>

    <string name="record_list">기록 리스트</string>
    <string name="number_textview_example">1.</string>
    <string name="example_content">[ 00시 00분 ] / [ 대전 00구 00로 00길 00 – 00 ]</string>
    <string name="example_content_detail">위반사항 없음</string>

    <string name="notification_not">비고지</string>
    <string name="notification_maintenance">유지 고지</string>

    <string name="place_zone">대상 지역</string>
    <string name="place_zone_example">[ 주거 지역 ]</string>
    <string name="time_zone">시간대</string>
    <string name="time_zone_example">[ 주간 ]</string>

    <string name="addTextEditTextHint">추가로 보낼 txt message.</string>
    <string name="createNotification">고지서 만들기</string>
    <string name="plz_select_record">측정 기록을 선택해 주세요.</string>

    <string name="measurement_highest_noise">측정 최고 소음</string>
    <string name="measurement_equivalent_noise">측정 등가 소음</string>
    <string name="standard_highest_noise">기준 최고 소음</string>
    <string name="standard_equivalent_noise">기준 등가 소음</string>

    <string name="plz_input_content">내용을 입력해주세요.</string>
    <string name="save">저장</string>
    <string name="plz_input_text_message">메시지 내용을 입력해주세요.</string>
    <string name="notice_document">고지서</string>


    <string name="example_measurement_time">[ 0000 ] 년 [ 0 ] 월 [ 0 ] 일 [ 0 ] 시 [ 0 ] 분</string>

    <string name="maintenance">유지</string>
    <string name="plz_retry">다시 실행해주세요.</string>

    <string name="finish_notification">고지 내용 저장</string>

    <string name="plz_retry_connect_network">네트워크를 확인하고 다시 시도해주세요.</string>
    <string name="press_the_back_button">\'뒤로\' 버튼을 한 번 더 누르면 종료됩니다.</string>

    <string name="complete_add_notification">고지 내용이 저장되었습니다.</string>
    <string name="notify_hanguel">고지</string>
    <string name="_number_notify">[0]번고지</string>
    <string name="exceed_noise">소음 초과</string>

    <string name="text_message">text message</string>
</resources>