<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="com.police.demonstration.manage_demonstration.record.NotifyAdaptor" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/content4"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/example_content"
                android:textColor="@color/contents"
                android:textSize="15sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/numberTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/notify_hanguel"
                android:textColor="@color/contents"
                android:textSize="15sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/content4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/numberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_textview_example"
                android:textColor="@color/contents"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shape_circle_red" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>